# rss-aggregator-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
bot/: config.py  database.py  main.py  middlewares.py  models.py
bot/handlers/: digest.py  feeds.py  groups.py  keywords.py  opml.py
bot/services/: digest_service.py  feed_service.py  opml_service.py  scheduler_service.py
tests/: conftest.py  test_digest_service.py  test_feed_service.py  test_models.py  test_opml_service.py
